# sp500analyzer

./: README.md  dashboard.py  fetch_data.py  gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: prices.csv
src/: analysis.py  data.py  sectors.py
tests/: test_analysis.py  test_data.py  test_sectors.py
