[project]
name = "sp500-analysis-engine"
version = "1.0.0"
description = "Vectorised S&P 500 analysis engine with Streamlit dashboard"
requires-python = ">=3.10"
explicit_package_bases = true
mypy_path = "."
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.18",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "mypy>=1.8",
    "pytest>=8.0",
    "pandas-stubs>=2.0",
]
fetch = [
    "yfinance>=0.2",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
